# axum-mcp

./: Cargo.toml  README.md  ROADMAP.md
docs/: API.md
examples/: minimal_server.rs  prompt_registry_example.rs  resource_registry_example.rs
src/: error.rs  lib.rs
src/protocol/: mod.rs
src/security/: auth.rs  mod.rs  permissions.rs  rate_limit.rs
src/server/: config.rs  handler.rs  mod.rs  progress.rs  prompt.rs  registry.rs  resource.rs  service.rs
src/transport/: connection.rs  mod.rs  sse.rs  stdio.rs  streamable_http.rs
