[package]
name = "axum-mcp"
version = "0.1.0"
edition = "2021"
description = "Generic MCP (Model Context Protocol) implementation with Axum integration"
license = "MIT OR Apache-2.0"
repository = "https://github.com/michiel/axum-mcp"
authors = ["Ratchet Contributors"]
keywords = ["mcp", "axum", "llm", "ai", "protocol"]
categories = ["web-programming", "api-bindings", "development-tools"]
readme = "README.md"

# This crate is now part of the Ratchet workspace

[dependencies]
# Core async runtime
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"

# Serialization and JSON handling
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }

# HTTP client and server  
axum = { version = "0.7", features = ["json", "macros"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
http = "1.0"
futures-util = "0.3"

# Logging and tracing
tracing = "0.1"

# Error handling
thiserror = "1.0"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Additional dependencies for transport
tokio-stream = { version = "0.1", features = ["sync"] }
base64 = "0.22"
rand = "0.8"
sha2 = "0.10"
humantime-serde = "1.1"
url = "2.5"
urlencoding = "2.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
async-stream = "0.3"
anyhow = "1.0"

[features]
default = ["server", "client", "transport-stdio", "transport-sse", "transport-streamable-http", "handlers"]
server = []
client = []
transport-stdio = []
transport-sse = []
transport-streamable-http = []
handlers = []

[dev-dependencies]
tokio-test = "0.4"
tower = "0.4"
hyper = "1.0"
tracing-subscriber = "0.3"

[[example]]
name = "minimal_server"
required-features = ["server", "transport-sse", "handlers"]

[[example]]
name = "resource_registry_example"
required-features = ["server", "transport-sse", "handlers"]

[[example]]
name = "prompt_registry_example"
required-features = ["server", "transport-sse", "handlers"]
